# ds-r-2025

./: .gitignore  .lintr.R  README.md  install.R  messy_data.csv
interview-extractor/: analyse.py  extract_speeches.py  pyproject.toml
interview-extractor/src/: words.py
lessons/: how-to-jupyter.ipynb  welcome.ipynb
lessons/1/: Untitled-1.ipynb  lesson-1.1.R  lesson-1.1.ipynb  lesson-1.2.R  lesson-1.2.ipynb  lesson-1.3.R  lesson-1.3.ipynb  lesson-1.4.ipynb  lesson-1.5.ipynb
lessons/2/: lesson-2.1.ipynb  lesson-2.2.ipynb  lesson-2.3.ipynb  lesson-2.4.ipynb
python/: README.md  pyproject.toml
python/src/: generate_qr.py  replace_in_ipynb.py
shared/: assignment.txt  ideas.txt  links.txt  welcome.ipynb
