[project]
name = "interview-extractor"
version = "0.1.0"
description = ""
authors = [{ name = "PetrCala", email = "cala.p@seznam.cz" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests (>=2.32.3,<3.0.0)", "lxml (>=5.3.1,<6.0.0)", "pandas (>=2.2.3,<3.0.0)", "scipy (>=1.15.2,<2.0.0)", "matplotlib (>=3.10.1,<4.0.0)", "nltk (>=3.9.1,<4.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
