[project]
name = "srcds-r-python"
version = "0.1.0"
description = ""
authors = [{ name = "PetrCala" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"

[tool.poetry.dependencies]
qrcode = "^8.0"
pillow = "^11.1.0"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
